# SE_unified_v2

./: CMakeLists.txt  LICENSE  PAPERS.md  README.md  init.m
SE0P/: laplace_demo.m  laplace_gradient_demo.m  rotlet_demo.m  stokeslet_demo.m  stresslet_demo.m
SE0P/mex/: CMakeLists.txt  SE0P_Laplace_real_cut_cell.c  SE0P_Rotlet_real_cut_cell.c  SE0P_Stokeslet_real_cut_cell.c  SE0P_Stresslet_real_cut_cell.c  SE0P_precompute_kernel_fft_mex.c  SE0P_precompute_kernel_fft_mpfr_mex.c  SE0P_precompute_kernel_fft_quad_mex.c
SE0P/src/: SE0P_Laplace_fourier_space.m  SE0P_Laplace_precompute_kernel_fft.m  SE0P_Laplace_real_space.m  SE0P_Laplace_scaling.m  SE0P_Rotlet_fourier_space.m  SE0P_Rotlet_precompute_kernel_fft.m  SE0P_Rotlet_real_space.m  SE0P_Rotlet_scaling.m  SE0P_Stokeslet_fourier_space.m  SE0P_Stokeslet_precompute_kernel_fft.m  SE0P_Stokeslet_real_space.m  SE0P_Stokeslet_scaling.m  SE0P_Stresslet_fourier_space.m  SE0P_Stresslet_precompute_kernel_fft.m  SE0P_Stresslet_real_space.m  SE0P_Stresslet_scaling.m  SE0P_base_fourier_space.m  SE0P_base_precompute_kernel_fft.m  SE0P_check_options.m  SE0P_gridding_precomp.m  SE0P_precompute_window_fft.m
SE1P/: laplace_demo.m  laplace_gradient_demo.m  rotlet_demo.m  stokeslet_demo.m  stresslet_demo.m
SE1P/mex/: CMakeLists.txt  SE1P_Laplace_real_cut_cell.c  SE1P_Rotlet_real_cut_cell.c  SE1P_Stokeslet_real_cut_cell.c  SE1P_Stresslet_real_cut_cell.c
SE1P/src/: SE1P_Laplace_fourier_space.m  SE1P_Laplace_real_space.m  SE1P_Laplace_scaling.m  SE1P_Rotlet_fourier_space.m  SE1P_Rotlet_real_space.m  SE1P_Rotlet_scaling.m  SE1P_Stokeslet_fourier_space.m  SE1P_Stokeslet_real_space.m  SE1P_Stokeslet_scaling.m  SE1P_Stresslet_fourier_space.m  SE1P_Stresslet_real_space.m  SE1P_Stresslet_scaling.m  SE1P_base_fourier_space.m  SE1P_check_options.m  SE1P_fftnd.m  SE1P_gridding_precomp.m  SE1P_ifftnd.m  SE1P_window_fft_precomp.m
SE2P/: laplace_demo.m  laplace_gradient_demo.m  rotlet_demo.m  stokeslet_demo.m  stresslet_demo.m
SE2P/mex/: CMakeLists.txt  SE2P_Laplace_real_cut_cell.c  SE2P_Rotlet_real_cut_cell.c  SE2P_Stokeslet_real_cut_cell.c  SE2P_Stresslet_real_cut_cell.c
SE2P/src/: SE2P_Laplace_fourier_space.m  SE2P_Laplace_real_space.m  SE2P_Laplace_scaling.m  SE2P_Rotlet_fourier_space.m  SE2P_Rotlet_real_space.m  SE2P_Rotlet_scaling.m  SE2P_Stokeslet_fourier_space.m  SE2P_Stokeslet_real_space.m  SE2P_Stokeslet_scaling.m  SE2P_Stresslet_fourier_space.m  SE2P_Stresslet_real_space.m  SE2P_Stresslet_scaling.m  SE2P_base_fourier_space.m  SE2P_check_options.m  SE2P_fftnd.m  SE2P_gridding_precomp.m  SE2P_ifftnd.m  SE2P_window_fft_precomp.m
SE3P/: laplace_demo.m  laplace_gradient_demo.m  rotlet_demo.m  stokeslet_demo.m  stresslet_demo.m
SE3P/mex/: .gitignore  CMakeLists.txt  SE3P_Laplace_real_cut_cell.c  SE3P_Rotlet_real_cut_cell.c  SE3P_Stokeslet_real_cut_cell.c  SE3P_Stresslet_real_cut_cell.c  cell_list.c  cell_list.h
SE3P/src/: SE3P_Laplace_fourier_space.m  SE3P_Laplace_real_space.m  SE3P_Laplace_scaling.m  SE3P_Rotlet_fourier_space.m  SE3P_Rotlet_real_space.m  SE3P_Rotlet_scaling.m  SE3P_Stokeslet_fourier_space.m  SE3P_Stokeslet_real_space.m  SE3P_Stokeslet_scaling.m  SE3P_Stresslet_fourier_space.m  SE3P_Stresslet_real_space.m  SE3P_Stresslet_scaling.m  SE3P_base_fourier_space.m  SE3P_check_options.m  SE3P_gridding_precomp.m  SE3P_window_fft_precomp.m  complex_erf.m
SE_common/: SE_Laplace_params.m  SE_Laplace_self_term.m  SE_Rotlet_params.m  SE_Stokeslet_params.m  SE_Stokeslet_self_term.m  SE_Stresslet_params.m  SE_aft_k_vectors.m  SE_compute_grid_size.m  SE_draw_box.m  SE_k_vectors.m  SE_random_system.m  SE_real_space.m  SE_stresslet_normalization.m  SE_warnings.m  recenter_points.m  resizefig.m  sfigure.m
SE_common/mex/: CMakeLists.txt  SE_real_space_mex.c  SE_real_space_mex.h
SE_direct/mex/: CMakeLists.txt  SE_direct_common.c  SE_direct_common.h  incomplete_bessel_K.c  incomplete_bessel_K.h
SE_direct/mex/Laplace/: CMakeLists.txt  SE0P_Laplace_direct.c  SE1P_Laplace_direct.c  SE2P_Laplace_direct.c  SE3P_Laplace_direct.c  SE_Laplace_direct.h  SE_Laplace_direct_mex.c
SE_direct/mex/Rotlet/: CMakeLists.txt  SE0P_Rotlet_direct.c  SE1P_Rotlet_direct.c  SE2P_Rotlet_direct.c  SE3P_Rotlet_direct.c  SE_Rotlet_direct.h  SE_Rotlet_direct_mex.c  rotlet_decomp.h
SE_direct/mex/Stokeslet/: CMakeLists.txt  SE0P_Stokeslet_direct.c  SE1P_Stokeslet_direct.c  SE2P_Stokeslet_direct.c  SE3P_Stokeslet_direct.c  SE_Stokeslet_direct.h  SE_Stokeslet_direct_mex.c  beenakker_decomp.h  hasimoto_decomp.h
SE_direct/mex/Stresslet/: CMakeLists.txt  SE0P_Stresslet_direct.c  SE1P_Stresslet_direct.c  SE2P_Stresslet_direct.c  SE3P_Stresslet_direct.c  SE_Stresslet_direct.h  SE_Stresslet_direct_mex.c  hasimoto_decomp.h
SE_fast_gridding/: CMakeLists.txt
SE_fast_gridding/src/: SE_fg_windows.c  SE_fgg.c  SE_fgg.h  SE_fgg_MEX_params.c  SE_fgg_force.c  SE_fkg.c  SE_fkg.h  SE_fkg_force.c  dev_generate_basic_kaiser_poly.m  dev_generate_basic_kaiser_poly_deriv.m  gen_basic_kaiser_poly.c  gen_basic_kaiser_poly_deriv.c
SE_fast_gridding/src/old_matlab_code/: SE_fg_int.m  SE_fg_int_extended.m
